--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         
-        <link rel="stylesheet" type="text/css" href="../Resources/css/normalize.css">
-        <link rel="stylesheet" type="text/css" href="../Resources/css/animate.css">
-        <link rel="stylesheet" type="text/css" href="../Resources/css/style.css">
+        <link rel="stylesheet" type="text/css" href="Resources/css/normalize.css">
+        <link rel="stylesheet" type="text/css" href="Resources/css/animate.css">
+        <link rel="stylesheet" type="text/css" href="Resources/css/style.css">
         <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
         
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
@@ -73,7 +73,7 @@
            <a class="navIcon" onclick="showNav()" style="position:fixed;height:50px;width:45px;right:10px;top:10px;">
            </a>
            <div style="text-align:center;position:absolute;top:25%">
-               <img src="../Resources/css/img/IOfull.png" style="width:50%;">
+               <img src="Resources/css/img/IOfull.png" style="width:50%;">
                <br>
                <a class="btn landBTN joinBTN"  style="margin-bottom:10px;width:200px;font-size:16px;text-align:left;">Join Now <i class="fa fa-arrow-right" style="padding-left:75px" aria-hidden="true"></i></a>
                <br>
