--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                
                <a href="tel:814-315-2994" class="btn phoneBTN landBTN" style="margin-bottom:10px;width:200px;font-size:16px;text-align:center;height:25px;padding:0;"><i class="fa fa-phone" aria-hidden="true"></i> 814-315-2994</a>
                <br>
-               <a href="#landingInfo" class="btn moreBTN" style="margin-bottom:10px;width:200px;font-size:16px;text-align:center;height:25px;padding:0;"><i class="fa fa-arrow-down" style="padding-right:20px" aria-hidden="true"></i> More <i class="fa fa-arrow-down" style="padding-left:20px" aria-hidden="true"></i></a>
+               <a href="#landingInfo" class="btn moreBTN" style="margin-bottom:10px;font-size:16px;text-align:center;width:200px;height:25px;padding:0;"><i class="fa fa-arrow-down" style="padding-right:20px" aria-hidden="true"></i> More <i class="fa fa-arrow-down" style="padding-left:20px" aria-hidden="true"></i></a>
                <br>
            </div>
       </header>
