--- a/index.html
+++ b/index.html
@@ -273,19 +273,19 @@
       <div id="siteMap">
          <div class="mapSection">
              <span style="font-size:20px;font-weight:bold;color:#F15A2A !important;">POWER ON</span>
-             <a class="sectionElem">Join Now</a>
+             <a href="Pages/memberships.html" class="sectionElem">Join Now</a>
              <a class="sectionElem">Free Trial</a>
-             <a class="sectionElem">Membership</a>
+             <a href="memberships.html" class="sectionElem">Membership</a>
          </div>
           <div class="mapSection">
              <span style="font-size:20px;font-weight:bold;color:#F15A2A !important;">SERVICES</span>
-             <a class="sectionElem">Download Our App</a>
+             <a href="get.mndbdy.ly/s1ud/Hu3K8tBtHB" class="sectionElem">Download Our App</a>
               <a class="sectionElem">Refer a Friend</a>
-              <a class="sectionElem">Member Login</a>
+              <a target="_blank" href="https://clients.mindbodyonline.com/ASP/su1.asp?studioid=481565&tg=&vt=&lvl=&stype=&view=&trn=0&page=&catid=&prodid=&date=6%2f15%2f2017&classid=0&prodGroupId=&sSU=&optForwardingLink=&qParam=&justloggedin=&nLgIn=&pMode=0&loc=1" class="sectionElem">Member Login</a>
          </div>
          <div class="mapSection" style="top:0">
              <span style="font-size:20px;font-weight:bold;color:#F15A2A !important;">SUPPORT</span>
-             <a class="sectionElem">Map &amp; Directions</a>
+             <a onclick="showMap()" class="sectionElem">Map &amp; Directions</a>
              <a class="sectionElem">Contact Us</a>
              <a class="sectionElem">Holiday Hours</a>
          </div>
