--- a/Pages/memberships.html
+++ b/Pages/memberships.html
@@ -113,7 +113,7 @@
          </div>
           <div class="mapSection">
              <span style="font-size:20px;font-weight:bold;color:#F15A2A !important;">SERVICES</span>
-             <a href="get.mndbdy.ly/s1ud/Hu3K8tBtHB" class="sectionElem">Download Our App</a>
+             <a href="https://play.google.com/store/apps/details?id=com.fitnessmobileapps.ironoxygenfitness&hl=en">Download Our App</a>
               <a class="sectionElem">Refer a Friend</a>
               <a target="_blank" href="https://clients.mindbodyonline.com/ASP/su1.asp?studioid=481565&tg=&vt=&lvl=&stype=&view=&trn=0&page=&catid=&prodid=&date=6%2f15%2f2017&classid=0&prodGroupId=&sSU=&optForwardingLink=&qParam=&justloggedin=&nLgIn=&pMode=0&loc=1" class="sectionElem">Member Login</a>
          </div>
