--- a/index.html
+++ b/index.html
@@ -275,11 +275,11 @@
              <span style="font-size:20px;font-weight:bold;color:#F15A2A !important;">POWER ON</span>
              <a href="Pages/memberships.html" class="sectionElem">Join Now</a>
              <a class="sectionElem">Free Trial</a>
-             <a href="memberships.html" class="sectionElem">Membership</a>
+             <a href="Pages/memberships.html" class="sectionElem">Membership</a>
          </div>
           <div class="mapSection">
              <span style="font-size:20px;font-weight:bold;color:#F15A2A !important;">SERVICES</span>
-             <a>Download Our App</a>
+             <a href="https://play.google.com/store/apps/details?id=com.fitnessmobileapps.ironoxygenfitness&hl=en" class="sectionElem">Download Our App</a>
               <a class="sectionElem">Refer a Friend</a>
               <a target="_blank" href="https://clients.mindbodyonline.com/ASP/su1.asp?studioid=481565&tg=&vt=&lvl=&stype=&view=&trn=0&page=&catid=&prodid=&date=6%2f15%2f2017&classid=0&prodGroupId=&sSU=&optForwardingLink=&qParam=&justloggedin=&nLgIn=&pMode=0&loc=1" class="sectionElem">Member Login</a>
          </div>
