--- a/Pages/memberships.html
+++ b/Pages/memberships.html
@@ -119,8 +119,8 @@
                       </div>
                       </div>
                      <br>
-                      <a class="social" target="_blank" href="https://www.facebook.com/IronOxygen/"><i class="fa fa-instagram" aria-hidden="true" style="font-size:40px;padding-right:15px;"></i></a>
-                      <a class="social" target="_blank" href="https://www.instagram.com/ironoxygenfitness/"><i class="fa fa-facebook-square" style="font-size:40px;padding-left:15px;" aria-hidden="true"></i></a>
+                      <a class="social" target="_blank" href="https://www.instagram.com/ironoxygenfitness/"><i class="fa fa-instagram" aria-hidden="true" style="font-size:40px;padding-right:15px;"></i></a>
+                      <a class="social" target="_blank" href="https://www.facebook.com/IronOxygen/"><i class="fa fa-facebook-square" style="font-size:40px;padding-left:15px;" aria-hidden="true"></i></a>
                   
               </div>
           </div>
@@ -187,9 +187,9 @@
       <div class="memMap animated fadeIn" id="siteMap">
          <div class="mapSection">
              <span style="font-size:20px;font-weight:bold;color:#F15A2A !important;">POWER ON</span>
-             <a href="Pages/memberships.html" class="sectionElem">Join Now</a>
+             <a href="memberships.html" class="sectionElem">Join Now</a>
              <a target="_blank" href="freetrial.html" class="sectionElem">Free Trial</a>
-             <a href="Pages/memberships.html" class="sectionElem">Membership</a>
+             <a href="memberships.html" class="sectionElem">Membership</a>
          </div>
           <div class="mapSection">
              <span style="font-size:20px;font-weight:bold;color:#F15A2A !important;">SERVICES</span>
