--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
                       </div>
                       </div>
                      <br>
-                      <a class="social" target="_blank" href="https://www.facebook.com/IronOxygen/"><i class="fa fa-instagram" aria-hidden="true" style="font-size:40px;padding-right:15px;"></i></a>
-                      <a class="social" target="_blank" href="https://www.instagram.com/ironoxygenfitness/"><i class="fa fa-facebook-square" style="font-size:40px;padding-left:15px;" aria-hidden="true"></i></a>
+                      <a class="social" target="_blank" href="https://www.instagram.com/ironoxygenfitness/"><i class="fa fa-instagram" aria-hidden="true" style="font-size:40px;padding-right:15px;"></i></a>
+                      <a class="social" target="_blank" href="https://www.facebook.com/IronOxygen/"><i class="fa fa-facebook-square" style="font-size:40px;padding-left:15px;" aria-hidden="true"></i></a>
                   
               </div>
           </div>
