--- a/Pages/schedule.html
+++ b/Pages/schedule.html
@@ -59,7 +59,7 @@
           
           <div style="text-align:center" class="divNav animated slideOutRight">
              <div style="top:20%;position:absolute;width:320px;text-align:center;margin-left:-150px;left:50%;">
-              <a href=".//index.html"><span class="navItem">Home</span></a>
+              <a href="../index.html"><span class="navItem">Home</span></a>
               <br>
               <a href="memberships.html"><span class="navItem">Join Now</span></a>
               <br>
