Added terms to all pages

--- a/Pages/freetrial.html
+++ b/Pages/freetrial.html
@@ -43,6 +43,10 @@ var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') retu
 try { wazha3a0m958wj = new WufooForm();wazha3a0m958wj.initialize(options);wazha3a0m958wj.display(); } catch (e) {}};
 var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
 })(document, 'script');</script>
+     <div style="border-top:.1px solid white;width:75%;max-width:400px;margin:0 auto;margin-top:5px;"></div>
+         <div style="font-size:12px;font-weight:100 !important;padding-top:5px;color:white">
+             Copyright &copy 2017 Iron Oxygen Fitness - <a style="text-decoration:underline" target="_blank" href="terms.html">Terms of Service and Privacy Policy</a>
+         </div>
       </header>
 
 
