--- a/Pages/thankyou.html
+++ b/Pages/thankyou.html
@@ -62,7 +62,10 @@
             <br>
             <br>
           <p style="color:white;font-weight:bold;margin:10px;">Thank you for signing up to receive the FREE week pass from Iron Oygen Fitness. Please check your email for redemption instructions and get ready to get in shape while enjoying the Level Red boxing instruction!</p>
-
+<div style="border-top:.1px solid white;width:75%;max-width:400px;margin:0 auto;margin-top:5px;"></div>
+         <div style="font-size:12px;font-weight:100 !important;padding-top:5px;color:white">
+             Copyright &copy 2017 Iron Oxygen Fitness - <a style="text-decoration:underline" target="_blank" href="terms.html">Terms of Service and Privacy Policy</a>
+         </div>
       </header>
 
 
