--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
          </div>
          <div style="border-top:.1px solid white;width:75%;max-width:400px;margin:0 auto;margin-top:5px;"></div>
          <div style="font-size:12px;font-weight:100 !important;padding-top:5px;">
-             Copyright &copy 2017 Iron Oxygen Fitness - <a style="text-decoration:underline" target="_blank" href="Pages/terms.html">Terms of Service</a>
+             Copyright &copy 2017 Iron Oxygen Fitness - <a style="text-decoration:underline" target="_blank" href="Pages/terms.html">Terms of Service and Privacy Policy</a>
          </div>
       </div>
       
