--- a/Pages/gallery.html
+++ b/Pages/gallery.html
@@ -204,6 +204,10 @@ function showDivs(n) {
              <a onclick="showContact()" class="sectionElem">Contact Us</a>
              <a onclick="showHoliday()" class="sectionElem">Holiday Hours</a>
          </div>
+         <div style="border-top:.1px solid white;width:75%;max-width:400px;margin:0 auto;margin-top:5px;"></div>
+         <div style="font-size:12px;font-weight:100 !important;padding-top:5px;">
+             Copyright &copy 2017 Iron Oxygen Fitness - <a style="text-decoration:underline" target="_blank" href="terms.html">Terms of Service and Privicy Policy</a>
+         </div>
       </div>
       
     </body>  
