Fix 1 for firefox

--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+      <meta charset="UTF-8">
+<meta name="description" content="Power On!">
+<meta name="keywords" content="iron, oxygen, fitness, gym, weight, lifting, iron oxygen fitness">
+<meta name="author" content="Iron Oxygen Fitness">
        <style>
         .landingHeader1{background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://cdn.getforge.com/iof.getforge.io/1497635625/Resources/css/img/gallery/IO15.jpg);background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://cdn.getforge.com/iof.getforge.io/1497635625/Resources/css/img/gallery/IO15.jpg);background-size:cover;background-position:center;height:100vh;background-attachment:fixed;}
 .landingHeader2{background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://cdn.getforge.com/iof.getforge.io/1497635625/Resources/css/img/gallery/IO10.jpg);background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://cdn.getforge.com/iof.getforge.io/1497635625/Resources/css/img/gallery/IO10.jpg);background-size:cover;background-position:center;height:100vh;background-attachment:fixed;}
