--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <meta name="keywords" content="iron, oxygen, fitness, gym, weight, lifting, iron oxygen fitness">
 <meta name="author" content="Iron Oxygen Fitness">
        <style>
-        .landingHeader1{background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://cdn.getforge.com/iof.getforge.io/1497635625/Resources/css/img/gallery/IO15.jpg);background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://cdn.getforge.com/iof.getforge.io/1497635625/Resources/css/img/gallery/IO15.jpg);background-size:cover;background-position:center;height:100vh;background-attachment:fixed;}
-.landingHeader2{background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://cdn.getforge.com/iof.getforge.io/1497635625/Resources/css/img/gallery/IO10.jpg);background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://cdn.getforge.com/iof.getforge.io/1497635625/Resources/css/img/gallery/IO10.jpg);background-size:cover;background-position:center;height:100vh;background-attachment:fixed;}
-.landingHeader3{background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://cdn.getforge.com/iof.getforge.io/1497635625/Resources/css/img/gallery/IO8.jpg);background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(https://cdn.getforge.com/iof.getforge.io/1497635625/Resources/css/img/gallery/IO8.jpg);background-size:cover;background-position:center;height:100vh;background-attachment:fixed;}</style>
+        .landingHeader1{background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/css/img/gallery/IO15.jpg);background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/css/img/gallery/IO15.jpg);background-size:cover;background-position:center;height:100vh;background-attachment:fixed;}
+.landingHeader2{background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/css/img/gallery/IO10.jpg);background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/css/img/gallery/IO10.jpg);background-size:cover;background-position:center;height:100vh;background-attachment:fixed;}
+.landingHeader3{background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/css/img/gallery/IO8.jpg);background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/css/img/gallery/IO8.jpg);background-size:cover;background-position:center;height:100vh;background-attachment:fixed;}</style>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -17,7 +17,7 @@
         <link rel="stylesheet" type="text/css" href="Resources/css/normalize.css">
         <link rel="stylesheet" type="text/css" href="Resources/css/animate.css">
         <link rel="stylesheet" type="text/css" href="Resources/css/style.css">
-        <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
+        <link href='https://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://www.w3schools.com/lib/w3.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -26,7 +26,7 @@
         <script type="text/javascript">
 
             //auto changing background
-            var counter = 1,
+            var counter = 1;
             int = setInterval(function(){
             $("header").attr("class", "landingHeader" + counter);
             if (counter === 3){
@@ -364,7 +364,7 @@
          </div>
          <div style="border-top:.1px solid white;width:75%;max-width:400px;margin:0 auto;margin-top:5px;"></div>
          <div style="font-size:12px;font-weight:100 !important;padding-top:5px;">
-             Copyright &copy 2017 Iron Oxygen Fitness - <a style="text-decoration:underline" target="_blank" href="Pages/terms.html">Terms of Service and Privacy Policy</a>
+             Copyright &copy; 2017 Iron Oxygen Fitness - <a style="text-decoration:underline" target="_blank" href="Pages/terms.html">Terms of Service and Privacy Policy</a>
          </div>
       </div>
       
