--- a/Pages/freetrial.html
+++ b/Pages/freetrial.html
@@ -23,7 +23,7 @@
 
       <header class="trialHeader">
           
-            <img class="animated slideInDown" src="../Resources/css/img/IOfull.png" style="width:40%;max-width:300px;margin-top:5px;margin-left:5px;">
+            <img alt="iron oxygen fitness gym" class="animated slideInDown" src="../Resources/css/img/IOfull.png" style="width:40%;max-width:300px;margin-top:5px;margin-left:5px;">
             <br>
             <br>
             <div style="width:100%;max-width:500px;padding:5px;margin:0 auto" id="wufoo-wazha3a0m958wj">
