--- a/Pages/memberships.html
+++ b/Pages/memberships.html
@@ -137,22 +137,22 @@
            <div id="rotate" class="iButt animated tada" onclick="showNav()">
            </div>
             
-               <a href="../index.html"><img class="animated slideInDown" src="../Resources/css/img/IOfull.png" style="width:40%;max-width:300px;margin-top:5px;margin-left:5px;"></a>
+               <a href="../index.html"><img alt="iron oxygen fitness gym" class="animated slideInDown" src="../Resources/css/img/IOfull.png" style="width:40%;max-width:300px;margin-top:5px;margin-left:5px;"></a>
                
                <h1 class="animated fadeIn" style="text-align:center;font-family:font-family: 'Lato', 'Arial', sans-serif;font-weight:300;margin-top:20px;">Memberships</h1>
                <div class="animated fadeIn" id="headLine"></div>
                <br>
                <div class="animated fadeIn" style="text-align:center">
                    <div style="display:inline-block;margin:5px;">
-                       <span style="display:block;font-size:14px;verticaly-align:top;text-align:left"><img src="../Resources/css/img/IOlogo.png" style="height:20px;display:inline;vertical-align:top"> Unlimited access</span>
-                       <span style="display:block;font-size:14px;verticaly-align:top;text-align:left"><img src="../Resources/css/img/IOlogo.png" style="height:20px;display:inline;vertical-align:top"> Free childcare</span>
-                       <span style="display:block;font-size:14px;verticaly-align:top;text-align:left"><img src="../Resources/css/img/IOlogo.png" style="height:20px;display:inline;vertical-align:top"> Use of tanning</span>
+                       <span style="display:block;font-size:14px;verticaly-align:top;text-align:left"><img alt="iron oxygen fitness gym" src="../Resources/css/img/IOlogo.png" style="height:20px;display:inline;vertical-align:top"> Unlimited access</span>
+                       <span style="display:block;font-size:14px;verticaly-align:top;text-align:left"><img alt="iron oxygen fitness gym" src="../Resources/css/img/IOlogo.png" style="height:20px;display:inline;vertical-align:top"> Free childcare</span>
+                       <span style="display:block;font-size:14px;verticaly-align:top;text-align:left"><img alt="iron oxygen fitness gym" src="../Resources/css/img/IOlogo.png" style="height:20px;display:inline;vertical-align:top"> Use of tanning</span>
 
                    </div>
                    <div style="display:inline-block;margin:5px;">
-                       <span style="display:block;font-size:14px;verticaly-align:top;text-align:left"><img src="../Resources/css/img/IOlogo.png" style="height:20px;display:inline;vertical-align:top"> Free fitness classes</span>
-                       <span style="display:block;font-size:14px;verticaly-align:top;text-align:left"><img src="../Resources/css/img/IOlogo.png" style="height:20px;display:inline;vertical-align:top"> Unlimited group fitness classes</span>
-                       <span style="display:block;font-size:14px;verticaly-align:top;text-align:left"><img src="../Resources/css/img/IOlogo.png" style="height:20px;display:inline;vertical-align:top"> 10% off at Achilles Running</span>
+                       <span style="display:block;font-size:14px;verticaly-align:top;text-align:left"><img alt="iron oxygen fitness gym" src="../Resources/css/img/IOlogo.png" style="height:20px;display:inline;vertical-align:top"> Free fitness classes</span>
+                       <span style="display:block;font-size:14px;verticaly-align:top;text-align:left"><img alt="iron oxygen fitness gym" src="../Resources/css/img/IOlogo.png" style="height:20px;display:inline;vertical-align:top"> Unlimited group fitness classes</span>
+                       <span style="display:block;font-size:14px;verticaly-align:top;text-align:left"><img alt="iron oxygen fitness gym" src="../Resources/css/img/IOlogo.png" style="height:20px;display:inline;vertical-align:top"> 10% off at Achilles Running</span>
 
                    </div>
                </div>
