--- a/Pages/schedule.html
+++ b/Pages/schedule.html
@@ -137,7 +137,7 @@
            <div id="rotate" class="iButt animated tada" onclick="showNav()">
            </div>
             
-               <a href="../index.html"><img class="animated slideInDown" src="../Resources/css/img/IOfull.png" style="width:40%;max-width:300px;margin-top:5px;margin-left:5px;"></a>
+               <a href="../index.html"><img alt="iron oxygen fitness gym" class="animated slideInDown" src="../Resources/css/img/IOfull.png" style="width:40%;max-width:300px;margin-top:5px;margin-left:5px;"></a>
                
                <h1 class="animated fadeIn" style="text-align:center;font-family:font-family: 'Lato', 'Arial', sans-serif;font-weight:300;margin-top:20px;">Schedule</h1>
                <div class="animated fadeIn" id="headLine"></div>
