--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
       <meta name="keywords" content="iron oxygen fitness, iron oxygen, gym membership, ">
       
        <style> .landingHeader1{background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/css/img/gallery/IO15.jpg);background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/css/img/gallery/IO15.jpg);background-size:cover;background-position:center;height:100vh;background-attachment:fixed;} .landingHeader2{background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/css/img/gallery/IO10.jpg);background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/css/img/gallery/IO10.jpg);background-size:cover;background-position:center;height:100vh;background-attachment:fixed;} .landingHeader3{background-image:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/css/img/gallery/IO8.jpg);background-image:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url(Resources/css/img/gallery/IO8.jpg);background-size:cover;background-position:center;height:100vh;background-attachment:fixed;}</style>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -370,10 +369,11 @@
              Copyright &copy; 2017 Iron Oxygen Fitness - <a style="text-decoration:underline" target="_blank" href="Pages/terms.html">Terms of Service and Privacy Policy</a>
          </div>
       </div>
+      <div id="hiddenWrap">
       <div id="hidden1"></div>
             <div id="hidden2"></div>
 
          <div id="hidden3"></div>
-
+</div>
     </body>  
 </html>
