Added maps API key

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                   <div class="featureX" onclick="showMap()"><i class="fa fa-times xBTN" aria-hidden="true"></i></div>
 <br>
                   <span>2147 West 12th Street, Erie, PA 16505</span>
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2960.1190273516245!2d-80.1303634853303!3d42.10492155916947!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88327fbd975a4669%3A0x9019d7357fe62d71!2sIron+Oxygen+Fitness!5e0!3m2!1sen!2sus!4v1497462878861"  frameborder="0" style="border:0;height:340px;width:100%;margin-top:0px;" allowfullscreen></iframe>
+                  <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAvSXOEYM5Vc_EDFg0W22WakGS0TTym7Kk&q=Level Red Boxing, Erie, PA" style="border:0;height:340px;width:100%;margin-top:0px;" allowfullscreen></iframe>
               </div>
           </div>
           
@@ -288,7 +288,7 @@
                <p style="color:white;font-size:12px;max-width:400px;margin:0 auto;text-align:center;font-weight:bold;padding-left:10px;padding-right:10px">WE'RE DEDICATED TO POWERING YOUR LIFESTYLE THROUGH FITNESS. JOIN ON YOUR TERMS AND GET ENDLESS AMENITITES WITHOUT BREAKING THE BANK. 
                </p>
                <br>
-               <p style="color:white;font-size:12px;max-width:400px;margin:0 auto;text-align:center;font-weight:bold;padding-left:10px;padding-right:10px;">MEMBERSHIPS START AT $19.99 PER MONTH. POWER ON.
+               <p style="color:white;font-size:12px;max-width:400px;margin:0 auto;text-align:center;font-weight:bold;padding-left:10px;padding-right:10px;">MEMBERSHIPS START AT $19.99 PER MONTH. GET GROUP FITNESS, CHILDCARE, AND TRAINING FREE! POWER ON.
                </p>
                <br>
                <a href="Pages/memberships.html" class="btn landBTN joinBTN"  style="margin-bottom:10px;width:200px;font-size:16px;text-align:center;height:25px;padding:0;">Join Now</a>
