--- a/Pages/freetrial.html
+++ b/Pages/freetrial.html
@@ -23,28 +23,9 @@
 
       <header class="trialHeader">
           
-            <img alt="iron oxygen fitness gym" class="animated slideInDown" src="../Resources/css/img/IOfull.png" style="width:40%;max-width:300px;margin-top:5px;margin-left:5px;">
-            <br>
-            <br>
-            <div style="width:100%;max-width:500px;padding:5px;margin:0 auto" id="wufoo-wazha3a0m958wj">
-Fill out my <a href="https://nmtmarketing.wufoo.com/forms/wazha3a0m958wj">online form</a>.
-</div>
-<script type="text/javascript">var wazha3a0m958wj;(function(d, t) {
-var s = d.createElement(t), options = {
-'userName':'nmtmarketing',
-'formHash':'wazha3a0m958wj',
-'autoResize':true,
-'height':'421',
-'async':true,
-'host':'wufoo.com',
-'header':'show',
-'ssl':true};
-s.src = ('https:' == d.location.protocol ? 'https://' : 'http://') + 'www.wufoo.com/scripts/embed/form.js';
-s.onload = s.onreadystatechange = function() {
-var rs = this.readyState; if (rs) if (rs != 'complete') if (rs != 'loaded') return;
-try { wazha3a0m958wj = new WufooForm();wazha3a0m958wj.initialize(options);wazha3a0m958wj.display(); } catch (e) {}};
-var scr = d.getElementsByTagName(t)[0], par = scr.parentNode; par.insertBefore(s, scr);
-})(document, 'script');</script>
+            <a href="../index.html"><img alt="iron oxygen fitness gym" class="animated slideInDown" src="../Resources/css/img/IOfull.png" style="width:40%;max-width:300px;margin-top:5px;margin-left:5px;"></a>
+
+
      <div style="border-top:.1px solid white;width:75%;max-width:400px;margin:0 auto;margin-top:5px;"></div>
          <div style="font-size:12px;font-weight:100 !important;padding-top:5px;color:white">
              Copyright &copy; 2017 Iron Oxygen Fitness - <a style="text-decoration:underline" target="_blank" href="terms.html">Terms of Service and Privacy Policy</a>
