Ready for Epic Web handover

--- a/index.html
+++ b/index.html
@@ -140,14 +140,18 @@
              </div>
           </div>
           
-          <div class="bigFeature bigAmen">
-              <div class="smallFeature amenFeature animated slideOutDown" style="vertical-align:top;">
+          <div class="bigFeature2 bigAmen">
+              <div class="smallFeature2 amenFeature animated slideOutDown" style="vertical-align:top;">
                   <div class="featureX" onclick="showAmen()" style="text-align:right;"><i class="fa fa-times xBTN" aria-hidden="true"></i></div>
-                  <img style="width:45%;padding-bottom:10px;" src="Resources/css/img/amen/group.png">
-                  <img style="width:45%;padding-bottom:10px" src="Resources/css/img/amen/kids.png">
-                  <img style="width:45%;padding-bottom:10px" src="Resources/css/img/amen/spin.png">
-                  <img style="width:45%;padding-bottom:10px" src="Resources/css/img/amen/tanning.png">
-                  <img style="width:45%;padding-bottom:10px" src="Resources/css/img/amen/training.png">
+                  <img style="width:90%;padding-bottom:10px" src="Resources/css/img/amen/group.png">
+                  <br>
+                  <img style="width:90%;padding-bottom:10px" src="Resources/css/img/amen/kids.png">
+                  <br>
+                  <img style="width:90%;padding-bottom:10px" src="Resources/css/img/amen/spin.png">
+                  <br>
+                  <img style="width:90%;padding-bottom:10px" src="Resources/css/img/amen/tanning.png">
+                  <br>
+                  <img style="width:90%;padding-bottom:10px" src="Resources/css/img/amen/training.png">
               </div>
           </div>
 <!--
@@ -299,7 +303,7 @@
                
                <a href="#landingInfo" class="btn moreBTN" style="margin-bottom:10px;font-size:16px;text-align:center;width:200px;height:25px;padding:0;"><i class="fa fa-arrow-down" style="padding-right:20px" aria-hidden="true"></i> More <i class="fa fa-arrow-down" style="padding-left:20px" aria-hidden="true"></i></a>
                <br>
-               <br>
+               <a href="Pages/30daybellyoff.html" class="btn landBTN joinBTN"  style="margin-bottom:10px;width:350px;font-size:16px;text-align:center;height:25px;padding:0;">30 Day Fat Loss Challenge</a>
 
                 <div id="dayWrap" class="animated slideInUp">
                <div class="dayTime"><img src="Resources/css/img/landing/Sunday.svg"></div>
