--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                
                <a href="#landingInfo" class="btn moreBTN" style="margin-bottom:10px;font-size:16px;text-align:center;width:200px;height:25px;padding:0;"><i class="fa fa-arrow-down" style="padding-right:20px" aria-hidden="true"></i> More <i class="fa fa-arrow-down" style="padding-left:20px" aria-hidden="true"></i></a>
                <br>
-               <a href="Pages/30daybellyoff.html" class="btn landBTN joinBTN"  style="margin-bottom:10px;width:350px;font-size:16px;text-align:center;height:25px;padding:0;">30 Day Fat Loss Challenge</a>
+               <a href="Pages/30daybellyoff.php" class="btn landBTN joinBTN"  style="margin-bottom:10px;width:350px;font-size:16px;text-align:center;height:25px;padding:0;">30 Day Fat Loss Challenge</a>
 
                 <div id="dayWrap" class="animated slideInUp">
                <div class="dayTime"><img src="Resources/css/img/landing/Sunday.svg"></div>
@@ -325,6 +325,7 @@
           
           <div id="amenities" class="feature rec" onclick="showAmen()"></div>
           <a target="_blank" href="https://clients.mindbodyonline.com/classic/ws?studioid=481565&stype=40&prodId=155"><div id="web" class="feature rec" onclick="showWebOffer()"></div></a>
+          <a target="_blank" href="Pages/30daybellyoff.html"><div id="belly" class="feature rec"></div></a>
           <div id="promos" class="feature rec" onclick="showPromos()"></div>
           <div id="refer" class="feature rec" onclick="showRefer()"></div>
           <div id="kids" class="feature rec" onclick="showKids()"></div>
