--- a/Pages/thankyou.html
+++ b/Pages/thankyou.html
@@ -62,6 +62,10 @@
             <br>
             <br>
 <div style="border-top:.1px solid white;width:75%;max-width:400px;margin:0 auto;margin-top:5px;"></div>
+        <br>
+        <h1 style="color:white;font-weight: bold;">POWER ON! <img src="../Resources/css/img/IOlogo.png" height=40 style="margin-bottom:10px"></h1>
+        <p style="color:white;max-width:500px;margin:0 auto;">Get ready to experience 30 great days of fitness. Someone will be reaching out to you shortly.</p>
+        <br>
          <div style="font-size:12px;font-weight:100 !important;padding-top:5px;color:white">
              Copyright &copy; 2017 Iron Oxygen Fitness - <a style="text-decoration:underline" target="_blank" href="terms.html">Terms of Service and Privacy Policy</a>
          </div>
