--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
               <br>
               <a target="_blank" href="Pages/freetrial.html"><span class="navItem">Free Trial Membership</span></a>
               <br>
+              <a href="Pages/groupx.html"><span class="navItem">Group X &amp; Cycling</span></a>
+              <br>
               <a onclick="showHoliday()"><span class="navItem">Holiday Hours</span></a>
               <br>
               <a onclick="showContact()"><span class="navItem">Contact</span></a>
