--- a/Pages/groupx.html
+++ b/Pages/groupx.html
@@ -67,6 +67,8 @@
               <br>
               <a target="_blank" href="freetrial.html"><span class="navItem">Free Trial Membership</span></a>
               <br>
+              <a href="groupx.html"><span class="navItem">Group X &amp; Cycling</span></a>
+              <br>
               <a onclick="showHoliday()"><span class="navItem">Holiday Hours</span></a>
               <br>
               <a onclick="showContact()"><span class="navItem">Contact</span></a>
