--- a/Pages/terms.html
+++ b/Pages/terms.html
@@ -21,7 +21,7 @@
 
       <header>
           <div style="text-align:center">
-            <img class="animated slideInDown" src="../Resources/css/img/IOfull.png" style="width:40%;max-width:300px;margin-top:5px;margin-left:5px;"></div>
+              <a href="../index.html"><img class="animated slideInDown" src="../Resources/css/img/IOfull.png" style="width:40%;max-width:300px;margin-top:5px;margin-left:5px;"></a></div>
             <br>
 
             <h1 class="animated fadeIn" style="text-align:center;font-family:font-family: 'Lato', 'Arial', sans-serif;font-weight:300;margin-top:20px;">Terms of Service</h1>
