new computer push

--- a/Pages/schedule.html
+++ b/Pages/schedule.html
@@ -65,7 +65,7 @@
               <br>
               <a href="memberships.html"><span class="navItem">Join Now</span></a>
               <br>
-              <a target="_blank" href="freetrial.html"><span class="navItem">Free Trial Membership</span></a>
+              <a target="_blank" href="http://io999promo.getforge.io/"><span class="navItem">Free Trial Membership</span></a>
               <br>
               <a href="groupx.html"><span class="navItem">Group X &amp; Cycling</span></a>
               <br>
@@ -165,7 +165,7 @@
          <div class="mapSection">
              <span style="font-size:20px;font-weight:bold;color:#F15A2A !important;">POWER ON</span>
              <a href="memberships.html" class="sectionElem">Join Now</a>
-             <a target="_blank" href="freetrial.html" class="sectionElem">Free Trial</a>
+             <a target="_blank" href="http://io999promo.getforge.io/" class="sectionElem">Free Trial</a>
              <a href="memberships.html" class="sectionElem">Membership</a>
          </div>
           <div class="mapSection">
